# hole

./: .gitignore  CMakeLists.txt
data/: chameleon-dir.txt  citeseer.txt  cora.txt  emnlp.txt  pubmed.txt  squirrel-dir.txt
logs/: citeseer_2023-6-2|11:48:30.txt  test.txt
src/: main.cpp
src/entities/: adjacency_matrix.hpp  base_matrix.hpp  dense_matrix.hpp  distance.hpp  edge_matrix.hpp  graph_computer.hpp  sparse_matrix.hpp
src/nudities/: bfs.hpp  binary_dial.hpp  edge_indices.hpp  sp_tool.hpp
src/tasks/: deg.hpp  sns.hpp
src/tests/: test_0.hpp
src/utils/: file_manager.hpp  running_arg.hpp  string_processor.hpp  thread_pool.hpp  time_recorder.hpp
